<resources>
    <string name="app_name">Trip Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_prompt">Click to register!</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="memberName">Email</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_register">Login/Register</string>

    <string name="start_new_trip"> Start a new trip !</string>
    <string name="create_new_trip">Create new trip !</string>
    <string name="group">Group</string>
    <string name="go_solo">Go Solo</string>
    <string name="log_out">Log Out</string>
    <string name="group_code">Group code</string>
    <string name="trip_name">Trip name</string>
    <string name="your_name">Your name</string>
    <string name="info">Trip Details</string>
    <string name="custom_category_list">Custom Category List</string>
    <string name="title">Title</string>
    <string name="tags">Tags</string>
    <string name="create_list">Create List</string>
    <string name="expense_manager">Expense Manager</string>
    <string name="create_type">Create type</string>
    <string name="add_expense">Add expense</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="expense_name">Expense name</string>
    <string name="expense_report">Team Expense Report</string>
    <string name="your_budget">Your Budget</string>
    <string name="enter_amount_to_add">Enter amount</string>
</resources>