<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newTrip.presentation.StartNewTrip"
    android:background="@color/light_pink">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:titleTextColor="@color/dark_brown">


            <!--            <TextView-->
            <!--                android:id="@+id/title"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:gravity="center"-->
            <!--                android:minHeight="?actionBarSize"-->
            <!--                android:padding="16dp"-->
            <!--                android:text="@string/start_new_trip"-->
            <!--                android:textColor="@color/dark_brown"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:textStyle="bold"-->
            <!--                android:textSize="16sp"-->
            <!--                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />-->

        </androidx.appcompat.widget.Toolbar>


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="600dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/new_trip_lottie" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_loading"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:lottie_rawRes="@raw/loading"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_one"
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/pink"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/card_two"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:strokeColor="@color/dark_brown"
            app:strokeWidth="1dp">

            <ImageView
                android:id="@+id/imgOne"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/go_solo"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_person_24" />

            <TextView
                android:id="@+id/txtOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/go_solo"
                android:textColor="@color/dark_brown"
                android:textSize="16sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90997565" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_two"
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/pink"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card_one"
            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView"
            app:strokeColor="@color/dark_brown"
            app:strokeWidth="1dp">

            <ImageView
                android:id="@+id/imgTwo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/group"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_groups_24" />

            <TextView
                android:id="@+id/txtTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/group"
                android:textColor="@color/dark_brown"
                android:textSize="16sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_createTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_brown"
            android:padding="15dp"
            android:text="@string/create_new_trip"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.77" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:constraint_referenced_ids="btn_createTrip,card_one,card_two,lottieAnimationView,toolbar"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="216dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>






</androidx.coordinatorlayout.widget.CoordinatorLayout>